--- a/ejs-challenge/views/compose.ejs
+++ b/ejs-challenge/views/compose.ejs
@@ -1,7 +1,9 @@
 <%- include("partials/header"); -%>
 
 <h1>Compose</h1>
-<input type="test" name="">
-<button type="submit" name="button">Publish</button>
+<form class="" action="/compose" method="post">
+  <input type="test" name="postTitle">
+  <button type="submit" name="button">Publish</button>
+</form>
 
 <%- include("partials/footer"); -%>
