--- a/ejs-challenge/views/compose.ejs
+++ b/ejs-challenge/views/compose.ejs
@@ -2,8 +2,13 @@
 
 <h1>Compose</h1>
 <form class="" action="/compose" method="post">
-  <input type="test" name="postTitle">
-  <button type="submit" name="button">Publish</button>
+  <div class="form-group">
+    <label>Title</label>
+    <input class="form-control" type="text" name="postTitle">
+    <label>Post</label>
+    <textarea class="form-control" name="postBody" rows="5" cols="30"></textarea>
+  </div>
+  <button class="btn bth-primary" type="submit" name="button">Publish</button>
 </form>
 
 <%- include("partials/footer"); -%>
