--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -5,4 +5,8 @@
 
 <% console.log(posts); %>
 
+<% for(var i=0; i<posts.length; i++) { %>
+<%  console.log(posts[i].title); %>
+<% } %>
+
 <%- include("partials/footer"); -%>
