--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -3,11 +3,12 @@
 <h1>Home</h1>
 <p><%= startingContent %></p>
 
-<% console.log(posts); %>
-
  <% posts.forEach(function(post) { %>
   <h1><%= post.title  %></h1>
-  <p><%= post.content.substring(0, 100) + " ..."  %></p>
+  <p><%= post.content.substring(0, 100) + " ..."  %>
+    <a href="/posts/<%=post.title%>">Read More</a>
+  </p>
+
 <% }) %>
 
 <%- include("partials/footer"); -%>
